    <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
      <modelVersion>4.0.0</modelVersion>

      <groupId>apryraz.eworld</groupId>
      <artifactId>tworld</artifactId>
      <version>1.0-SNAPSHOT</version>
      <packaging>jar</packaging>

      <properties>   
        <maven.compiler.release>11</maven.compiler.release>
      </properties>

      <dependencies>
        <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>4.12</version>
          <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.sat4j/org.sat4j.core -->
         <dependency>
          <groupId>org.sat4j</groupId>
          <artifactId>org.sat4j.core</artifactId>
          <version>2.3.1</version>
          </dependency>
      </dependencies>
      <build>
	   <plugins>
	    <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>versions-maven-plugin</artifactId>
            <version>2.5</version>
           <configuration>
            <generateBackupPoms>false</generateBackupPoms>
           </configuration>
          </plugin>
          <plugin>
           <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
             <version>3.8.0</version>
            <configuration>
              <release>11</release>
            </configuration>
           </plugin>
           <plugin>
       	        <groupId>org.apache.maven.plugins</groupId>
  		 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.2.0</version>
		 <configuration>
			  <archive>
			    <manifest>
                               <addClasspath>true</addClasspath>
                               <classpathPrefix>dependency-jars/</classpathPrefix>
				<mainClass>apryraz.tworld.TreasureWorld</mainClass>
			    </manifest>
	  	  	  </archive>
  	 	 </configuration>
	    </plugin>
            <plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-dependency-plugin</artifactId>
			<version>3.1.2</version>
			<executions>
			  <execution>
				<id>copy-dependencies</id>
				<phase>package</phase>
				<goals>
					<goal>copy-dependencies</goal>
				</goals>
				<configuration>
				  <!-- exclude junit, we need runtime dependency only -->
				  <includeScope>runtime</includeScope>
	          		  <outputDirectory>${project.build.directory}/dependency-jars/</outputDirectory>
				</configuration>
			  </execution>
  		       </executions>
	   </plugin>
            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>exec-maven-plugin</artifactId>
              <version>1.2.1</version>
              <configuration>
                <mainClass>apryraz.tworld.TreasureWorld</mainClass>
              </configuration>
            </plugin>
	  </plugins>
     </build>
     <reporting>
       <plugins>
         <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.2.0</version>
         </plugin>
       </plugins>
     </reporting>
</project>
